<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
 
        <EditTextPreference
                android:title="@string/pref_uuid_title"
                android:summary="@string/pref_uuid_summary"
                android:key="prefUuid"
                android:defaultValue="00001101-0000-1000-8000-00805F9B34FB"/>
     
        <ListPreference
            android:key="prefOrientation"
            android:entries="@array/orientation"
            android:entryValues="@array/orientationValues"
            android:summary="@string/pref_orientation_summary"
            android:title="@string/pref_orientation_title" />
        
        <EditTextPreference 
            android:key="prefTextBuffer"
            android:title="@string/pref_text_buffer_title"
            android:summary="@string/pref_text_buffer_summary"
            android:defaultValue = "50000"
            android:inputType = "number"
            />
        <EditTextPreference 
            android:key="prefDefaultOffset"
            android:title="@string/pref_offset_title"
            android:summary="@string/pref_offset_summary"
            android:defaultValue = "25"
            android:inputType = "number"
            />
        <EditTextPreference 
            android:key="prefFBlimit"
            android:title="@string/pref_FB_title"
            android:summary="@string/pref_FB_summary"
            android:defaultValue = "10"
            android:inputType = "number"
            />
        <EditTextPreference 
            android:key="prefRLlimit"
            android:title="@string/pref_RL_title"
            android:summary="@string/pref_RL_summary"
            android:defaultValue = "15"
            android:inputType = "number"
            />
 
</PreferenceScreen>